--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/RobinThrift/blossom/issues"
   },
-  "homepage": "https://github.com/RobinThrift/blossom"
+  "homepage": "https://github.com/RobinThrift/blossom",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-mocha": "^2.1.3",
+    "gulp-tslint": "^3.1.2",
+    "gulp-typescript": "^2.8.0",
+    "mocha": "^2.2.5",
+    "should": "^7.0.2",
+    "yargs": "^3.16.1"
+  }
 }
