--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/RobinThrift/blossom",
   "devDependencies": {
+    "babel-core": "^5.8.20",
+    "babel-eslint": "^4.0.5",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
-    "gulp-tslint": "^3.1.2",
-    "gulp-typescript": "^2.8.0",
     "mocha": "^2.2.5",
     "should": "^7.0.2",
+    "gulp-babel": "^5.2.0",
+    "gulp-eslint": "^1.0.0",
     "yargs": "^3.16.1"
   }
 }
