--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
     "babel-core": "^5.8.20",
     "babel-eslint": "^4.0.5",
     "gulp": "^3.9.0",
-    "gulp-mocha": "^2.1.3",
-    "mocha": "^2.2.5",
-    "should": "^7.0.2",
     "gulp-babel": "^5.2.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-mocha": "^2.1.3",
+    "mocha": "^2.2.5",
+    "nock": "^2.9.1",
+    "should": "^7.0.2",
     "yargs": "^3.16.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^5.8.20",
+    "commander": "^2.8.1",
+    "lodash": "^3.10.0",
+    "q": "^1.4.1",
+    "request": "^2.60.0",
+    "sinon": "^1.15.4"
   }
 }
